refactor: 多工具迁移到 configBuilder，SlightXRay/CanSpawnDisplay 统一 Runner 模式
ToolUtils 重构：
- 提取 ToolWithRunnerConfig<T> 泛型配置类，统一管理工具生命周期
- 新增 runnerApplyCallback/applyToRunnerIfPresent 方法

CanSpawnDisplay / SlightXRay 迁移：
- DataInstance → CanSpawnDisplayRunner / SlightXRayRunner
- 实现 ToolUtils.ToolRunner，由 configBuilder 管理生命周期
- 删除手动 switchCallback/dataInstance 字段及 dataApplyCallback 辅助方法

AutoGrindstone / FurnaceMaintainer / LitematicaMaterial 迁移到 configBuilder：
- 删除手动 runner 管理字段和 switchCallback 方法

LitematicaMaterialRunner：
- 实现 ToolUtils.ToolRunner，构造时检测 Litematica 不可用时抛本地化异常
- 新增 getLitematicaMethodsOrThrow() + createFailedNoLitematica 本地化

MossBorer / SpawnProofer / LiquidCleaner：清理废弃 import 和文本设置调用